--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <link rel="stylesheet" href="stylesheet.css">
 <title>
 gotta go fast
 </title>
 </head>
  <body>
   <div id="header">
+   <p> im sanic and i gotta go  fast
+   </p>
+  </div>
+  <div id="mainbody">
+   <img src="http://img10.deviantart.net/2c63/i/2015/116/3/8/day_26___sanic_hegehog_by_moxie2d-d8r3v0h.jpg">Here is a picture of me.</img>
   </div>
   </body>
   </html>
