--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@ gotta go fast
   </div>
   <div id="mainbody">
    <img src="http://img10.deviantart.net/2c63/i/2015/116/3/8/day_26___sanic_hegehog_by_moxie2d-d8r3v0h.jpg">Here is a picture of me.</img>
+  <ul>
+   <p>My Bio</p>
+   <li>Im sonics cusin</li>
+   <li>I am just as fast as him</li>
+   <li>I am the best of the memes</li>
+   <li>and I know i have man boobs</li>
+   <li>PS. im fast</li>
   </div>
   </body>
   </html>
