--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ gotta go fast
    </p>
   </div>
   <div id="mainbody">
-   <img src="http://img10.deviantart.net/2c63/i/2015/116/3/8/day_26___sanic_hegehog_by_moxie2d-d8r3v0h.jpg">Here is a picture of me.</img>
+   <img src="http://img10.deviantart.net/2c63/i/2015/116/3/8/day_26___sanic_hegehog_by_moxie2d-d8r3v0h.jpg"><h1>Here is a picture of me.</h1></img>
   <ul>
    <p>My Bio</p>
    <li>Im sonics cusin</li>
