--- a/index.html
+++ b/index.html
@@ -22,5 +22,16 @@ gotta go fast
    <li>and I know i have man boobs</li>
    <li>PS. im fast</li>
   </div>
+  <div id="job">
+   <p>If you want to be a sanic #1, you have to work with me</p>
+    <ol>
+     <li>You have to work with me</li>
+     <li>You have to stare with me</li>
+     <li>You have to eat with me, and my cusion</li>
+     <li>You have to admire him with me</li>
+     <li>You have to..........................................................<h1>sleep with me.</h1></li>
+     <li>THE END</li>
+   </ol>
+  </div>
   </body>
   </html>
