--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ gotta go fast
      <li>You have to stare with me</li>
      <li>You have to eat with me, and my cusion</li>
      <li>You have to admire him with me</li>
-     <li>You have to..........................................................<h1 style="margin-right: -30px">sleep with me.</h1></li>
+     <li>You have to..........................................................<h1 style="float:right">sleep with me.</h1></li>
      <li>THE END</li>
    </ol>
   </div>
