--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@ gotta go fast
      <li>THE END</li>
    </ol>
   </div>
-  <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR-PrmcMF3RodlOofd7eF2vgLDW3VNtDcwdx1Pktp6Kb0HTzEfW" style="background-color:red; border:2px double red">I like your soul</img>
+  <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR-PrmcMF3RodlOofd7eF2vgLDW3VNtDcwdx1Pktp6Kb0HTzEfW" style="background-color:red; border:2px double red; position:fixed">I like your soul</img>
   </body>
   </html>
